generado/ArepaParser.py
# Generated from gramatica/Arepa.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ArepaParser ( Parser ):

    grammarFileName = "Arepa.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'quihubo'", "'chao'", "'monte'", "'guarde'", 
                     "'como'", "'con'", "'encabezado'", "'separador'", "'escoja'", 
                     "'deje'", "'donde'", "'acomode'", "'por'", "'pa_arriba'", 
                     "'pa_abajo'", "'cree'", "'renombre'", "'limpie'", "'duplicados'", 
                     "'vacios'", "'convierta'", "'junte'", "'resuma'", "'numero'", 
                     "'texto'", "'logico'", "'fecha'", "'pinte'", "'barras'", 
                     "'lineas'", "'histograma'", "'dispersion'", "'cajas'", 
                     "'titulo'", "'ejex'", "'ejey'", "'leyenda'", "'guardela'", 
                     "'muestrela'", "'invente'", "'devuelva'", "'fijese_si'", 
                     "'sino'", "'cuenteme'", "'describa'", "'mientras'", 
                     "'repita'", "'veces'", "'desde'", "'hasta'", "'paso'", 
                     "'pare'", "'siga'", "'obvio'", "'falso'", "'nada'", 
                     "'y'", "'o'", "'no'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'|>'", "'->'", "'='", "'=='", "'!='", "'<='", "'>='", 
                     "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "','" ]

    symbolicNames = [ "<INVALID>", "QUIHUBO", "CHAO", "MONTE", "GUARDE", 
                      "COMO", "CON", "ENCABEZADO", "SEPARADOR", "ESCOJA", 
                      "DEJE", "DONDE", "ACOMODE", "POR", "PA_ARRIBA", "PA_ABAJO", 
                      "CREE", "RENOMBRE", "LIMPIE", "DUPLICADOS", "VACIOS", 
                      "CONVIERTA", "JUNTE", "RESUMA", "NUMERO", "TEXTO", 
                      "LOGICO", "FECHA", "PINTE", "BARRAS", "LINEAS", "HISTOGRAMA", 
                      "DISPERSION", "CAJAS", "TITULO", "EJEX", "EJEY", "LEYENDA", 
                      "GUARDELA", "MUESTRELA", "INVENTE", "DEVUELVA", "FIJESE_SI", 
                      "SINO", "CUENTEME", "DESCRIBA", "MIENTRAS", "REPITA", 
                      "VECES", "DESDE", "HASTA", "PASO", "PARE", "SIGA", 
                      "OBVIO", "FALSO", "NADA", "Y", "O", "NO", "DECIMAL", 
                      "ENTERO", "CADENA", "PIPE", "FLECHA", "ASIGNACION", 
                      "IGUAL_IGUAL", "DIFERENTE", "MENOR_IGUAL", "MAYOR_IGUAL", 
                      "MENOR", "MAYOR", "MAS", "MENOS", "POR_OP", "DIVISION", 
                      "MODULO", "POTENCIA", "PAREN_I", "PAREN_D", "CORCHETE_I", 
                      "CORCHETE_D", "LLAVE_I", "LLAVE_D", "COMA", "NL", 
                      "WS", "COMENTARIO", "ID" ]

    RULE_programa = 0
    RULE_sentencias = 1
    RULE_sentencia = 2
    RULE_instruccion_llamada = 3
    RULE_asignacion = 4
    RULE_instruccion_guarde = 5
    RULE_instruccion_devolver = 6
    RULE_instruccion_cuenteme = 7
    RULE_instruccion_describa = 8
    RULE_definicion_funcion = 9
    RULE_parametros = 10
    RULE_condicional = 11
    RULE_ciclo_mientras = 12
    RULE_ciclo_repita = 13
    RULE_instruccion_pare = 14
    RULE_instruccion_siga = 15
    RULE_bloque = 16
    RULE_expresion = 17
    RULE_etapa_pipeline = 18
    RULE_operacion_datos = 19
    RULE_instruccion_monte = 20
    RULE_opciones_archivo = 21
    RULE_opcion_archivo = 22
    RULE_direccion = 23
    RULE_lista_columnas = 24
    RULE_item_resumen = 25
    RULE_tipo_dato = 26
    RULE_instruccion_grafica = 27
    RULE_tipo_grafica = 28
    RULE_clausula_estetica = 29
    RULE_final_grafica = 30
    RULE_expresion_logica = 31
    RULE_conjuncion = 32
    RULE_negacion = 33
    RULE_comparacion = 34
    RULE_operador_relacional = 35
    RULE_aritmetica = 36
    RULE_termino = 37
    RULE_factor = 38
    RULE_unario = 39
    RULE_atomo = 40
    RULE_llamada_funcion = 41
    RULE_lista_argumentos = 42
    RULE_cadena = 43
    RULE_identificador = 44
    RULE_nombre_columna = 45

    ruleNames =  [ "programa", "sentencias", "sentencia", "instruccion_llamada", 
                   "asignacion", "instruccion_guarde", "instruccion_devolver", 
                   "instruccion_cuenteme", "instruccion_describa", "definicion_funcion", 
                   "parametros", "condicional", "ciclo_mientras", "ciclo_repita", 
                   "instruccion_pare", "instruccion_siga", "bloque", "expresion", 
                   "etapa_pipeline", "operacion_datos", "instruccion_monte", 
                   "opciones_archivo", "opcion_archivo", "direccion", "lista_columnas", 
                   "item_resumen", "tipo_dato", "instruccion_grafica", "tipo_grafica", 
                   "clausula_estetica", "final_grafica", "expresion_logica", 
                   "conjuncion", "negacion", "comparacion", "operador_relacional", 
                   "aritmetica", "termino", "factor", "unario", "atomo", 
                   "llamada_funcion", "lista_argumentos", "cadena", "identificador", 
                   "nombre_columna" ]

    EOF = Token.EOF
    QUIHUBO=1
    CHAO=2
    MONTE=3
    GUARDE=4
    COMO=5
    CON=6
    ENCABEZADO=7
    SEPARADOR=8
    ESCOJA=9
    DEJE=10
    DONDE=11
    ACOMODE=12
    POR=13
    PA_ARRIBA=14
    PA_ABAJO=15
    CREE=16
    RENOMBRE=17
    LIMPIE=18
    DUPLICADOS=19
    VACIOS=20
    CONVIERTA=21
    JUNTE=22
    RESUMA=23
    NUMERO=24
    TEXTO=25
    LOGICO=26
    FECHA=27
    PINTE=28
    BARRAS=29
    LINEAS=30
    HISTOGRAMA=31
    DISPERSION=32
    CAJAS=33
    TITULO=34
    EJEX=35
    EJEY=36
    LEYENDA=37
    GUARDELA=38
    MUESTRELA=39
    INVENTE=40
    DEVUELVA=41
    FIJESE_SI=42
    SINO=43
    CUENTEME=44
    DESCRIBA=45
    MIENTRAS=46
    REPITA=47
    VECES=48
    DESDE=49
    HASTA=50
    PASO=51
    PARE=52
    SIGA=53
    OBVIO=54
    FALSO=55
    NADA=56
    Y=57
    O=58
    NO=59
    DECIMAL=60
    ENTERO=61
    CADENA=62
    PIPE=63
    FLECHA=64
    ASIGNACION=65
    IGUAL_IGUAL=66
    DIFERENTE=67
    MENOR_IGUAL=68
    MAYOR_IGUAL=69
    MENOR=70
    MAYOR=71
    MAS=72
    MENOS=73
    POR_OP=74
    DIVISION=75
    MODULO=76
    POTENCIA=77
    PAREN_I=78
    PAREN_D=79
    CORCHETE_I=80
    CORCHETE_D=81
    LLAVE_I=82
    LLAVE_D=83
    COMA=84
    NL=85
    WS=86
    COMENTARIO=87
    ID=88

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUIHUBO(self):
            return self.getToken(ArepaParser.QUIHUBO, 0)

        def CHAO(self):
            return self.getToken(ArepaParser.CHAO, 0)

        def EOF(self):
            return self.getToken(ArepaParser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(ArepaParser.NL)
            else:
                return self.getToken(ArepaParser.NL, i)

        def sentencias(self):
            return self.getTypedRuleContext(ArepaParser.SentenciasContext,0)


        def getRuleIndex(self):
            return ArepaParser.RULE_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = ArepaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==85:
                self.state = 92
                self.match(ArepaParser.NL)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(ArepaParser.QUIHUBO)
            self.state = 100 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 99
                    self.match(ArepaParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 102 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 13782378522607632) != 0) or _la==88:
                self.state = 104
                self.sentencias()


            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==85:
                self.state = 107
                self.match(ArepaParser.NL)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(ArepaParser.CHAO)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==85:
                self.state = 114
                self.match(ArepaParser.NL)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(ArepaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArepaParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(ArepaParser.SentenciaContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(ArepaParser.NL)
            else:
                return self.getToken(ArepaParser.NL, i)

        def getRuleIndex(self):
            return ArepaParser.RULE_sentencias

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencias" ):
                return visitor.visitSentencias(self)
            else:
                return visitor.visitChildren(self)




    def sentencias(self):

        localctx = ArepaParser.SentenciasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencias)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.sentencia()
            self.state = 131
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 124 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 123
                        self.match(ArepaParser.NL)
                        self.state = 126 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==85):
                            break

                    self.state = 128
                    self.sentencia() 
                self.state = 133
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(ArepaParser.AsignacionContext,0)


        def instruccion_guarde(self):
            return self.getTypedRuleContext(ArepaParser.Instruccion_guardeContext,0)


        def instruccion_grafica(self):
            return self.getTypedRuleContext(ArepaParser.Instruccion_graficaContext,0)


        def condicional(self):
            return self.getTypedRuleContext(ArepaParser.CondicionalContext,0)


        def ciclo_mientras(self):
            return self.getTypedRuleContext(ArepaParser.Ciclo_mientrasContext,0)


        def ciclo_repita(self):
            return self.getTypedRuleContext(ArepaParser.Ciclo_repitaContext,0)


        def instruccion_pare(self):
            return self.getTypedRuleContext(ArepaParser.Instruccion_pareContext,0)


        def instruccion_siga(self):
            return self.getTypedRuleContext(ArepaParser.Instruccion_sigaContext,0)


        def definicion_funcion(self):
            return self.getTypedRuleContext(ArepaParser.Definicion_funcionContext,0)


        def instruccion_devolver(self):
            return self.getTypedRuleContext(ArepaParser.Instruccion_devolverContext,0)


        def instruccion_cuenteme(self):
            return self.getTypedRuleContext(ArepaParser.Instruccion_cuentemeContext,0)


        def instruccion_describa(self):
            return self.getTypedRuleContext(ArepaParser.Instruccion_describaContext,0)


        def instruccion_llamada(self):
            return self.getTypedRuleContext(ArepaParser.Instruccion_llamadaContext,0)


        def getRuleIndex(self):
            return ArepaParser.RULE_sentencia

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = ArepaParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sentencia)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.asignacion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.instruccion_guarde()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                self.instruccion_grafica()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.condicional()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 138
                self.ciclo_mientras()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 139
                self.ciclo_repita()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 140
                self.instruccion_pare()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 141
                self.instruccion_siga()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 142
                self.definicion_funcion()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 143
                self.instruccion_devolver()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 144
                self.instruccion_cuenteme()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 145
                self.instruccion_describa()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 146
                self.instruccion_llamada()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Instruccion_llamadaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def llamada_funcion(self):
            return self.getTypedRuleContext(ArepaParser.Llamada_funcionContext,0)


        def getRuleIndex(self):
            return ArepaParser.RULE_instruccion_llamada

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion_llamada" ):
                return visitor.visitInstruccion_llamada(self)
            else:
                return visitor.visitChildren(self)




    def instruccion_llamada(self):

        localctx = ArepaParser.Instruccion_llamadaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instruccion_llamada)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.llamada_funcion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self):
            return self.getTypedRuleContext(ArepaParser.IdentificadorContext,0)


        def ASIGNACION(self):
            return self.getToken(ArepaParser.ASIGNACION, 0)

        def expresion(self):
            return self.getTypedRuleContext(ArepaParser.ExpresionContext,0)


        def getRuleIndex(self):
            return ArepaParser.RULE_asignacion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = ArepaParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.identificador()
            self.state = 152
            self.match(ArepaParser.ASIGNACION)
            self.state = 153
            self.expresion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Instruccion_guardeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GUARDE(self):
            return self.getToken(ArepaParser.GUARDE, 0)

        def identificador(self):
            return self.getTypedRuleContext(ArepaParser.IdentificadorContext,0)


        def COMO(self):
            return self.getToken(ArepaParser.COMO, 0)

        def cadena(self):
            return self.getTypedRuleContext(ArepaParser.CadenaContext,0)


        def getRuleIndex(self):
            return ArepaParser.RULE_instruccion_guarde

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion_guarde" ):
                return visitor.visitInstruccion_guarde(self)
            else:
                return visitor.visitChildren(self)



